<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/defaultMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/dialog"
        tools:context=".views.fragments.common.NotificationFragment">

        <TextView
            android:id="@+id/notificationText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/defaultMargin"
            android:background="@drawable/border_bottom"
            style="@style/Widget.App.TextViewAccent" />

        <ScrollView
            android:id="@+id/notificationInfoWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <TextView
                android:id="@+id/notificationInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/defaultMargin"
                style="@style/Widget.App.TextViewStandard" />

        </ScrollView>

        <RelativeLayout
            android:id="@+id/actionButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/declineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark_fill"
                android:layout_margin="5dp"
                android:text="@string/notificationDeclineText"
                style="@style/Widget.App.CancelButton" />

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/declineButton"
                android:layout_margin="5dp"
                android:background="@drawable/button_accent_fill"
                android:text="@string/notificationAcceptText"
                style="@style/Widget.App.OkButton" />

            <Button
                android:id="@+id/scrollDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:background="@drawable/button_dark_fill"
                android:text="@string/notificationScrollDownText"
                style="@style/Widget.App.CancelButton" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>