<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View" />

        <variable
            name="parent"
            type="com.fullybelly.views.activities.SettingsActivity" />
        <variable
            name="dataContext"
            type="com.fullybelly.viewModels.activities.SettingsViewModel" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fullscreen_bg"
        tools:context="com.fullybelly.views.activities.SettingsActivity">

        <TextView
            android:id="@+id/settingsEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:text="@string/settingsYourEmail"
            style="@style/Widget.App.SettingsStdText" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settingsEmail"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            tools:errorEnabled="true"
            app:hintEnabled="false"
            app:errorText="@{dataContext.emailValidation}">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:minHeight="@dimen/editTextHeight"
                android:drawableRight="@drawable/ic_pencil_ico"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:maxLines="1"
                android:minLines="1"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:onEditorAction="@{parent::onEditorAction}"
                android:text="@={dataContext.emailAddress}"
                style="@style/Widget.App.SettingsEditText" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:layout_below="@id/emailWrapper"
            android:layout_centerHorizontal="true"
            android:background="@color/orange"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider">

            <TextView
                android:id="@+id/paymentMethodsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/defaultMargin"
                android:layout_marginRight="@dimen/defaultMargin"
                android:layout_marginBottom="@dimen/defaultMargin"
                android:text="@string/chosenPaymentMethod"
                style="@style/Widget.App.SettingsStdText" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginRight="@dimen/defaultMargin"
                    android:checked="@={dataContext.p24CreditCardSelected}"
                    android:text="@string/payWithCreditCard"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginRight="@dimen/defaultMargin"
                    android:layout_height="wrap_content"
                    android:checked="@={dataContext.p24BankTransferSelected}"
                    android:text="@string/payWithBankTransfer"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

            </RadioGroup>

        </LinearLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:name="com.fullybelly.views.fragments.common.ToolbarFragment"
            tools:layout="@layout/fragment_toolbar"
            class="com.fullybelly.views.fragments.common.ToolbarFragment" />

    </RelativeLayout>

</layout>